[package]
name = "est"
authors = ["29 <791603901@qq.com>"]
version = "0.8.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["std", "anyhow", "result", "collections", "indexmap"]
categories = ["algorithms", "asynchronous", "data-structures", "memory-management", "rust-patterns"]
repository = "https://github.com/opensound-org/est"
homepage = "https://github.com/opensound-org/est"
description = """
Extensions for the rust Standard library and Tokio.
"""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we are using 2024 Edition.
# 因为我们正在使用2024 Edition。
# https://blog.rust-lang.org/2025/02/20/Rust-1.85.0.html
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.97"
derive_more = { version = "2.0.1", features = ["display"] }
indexmap = "2.9.0"
ron = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "process", "rt", "signal", "sync"] }
tokio-util = { version = "0.7.14", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread", "test-util", "time"] }
tokio-util = { version = "0.7.14", features = ["time"] }

[build-dependencies]
version_check = "0.9.5"
