[package]
name = "est"
authors = ["29 <791603901@qq.com>"]
version = "0.9.0"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["std", "anyhow", "result", "collections", "indexmap"]
categories = ["algorithms", "asynchronous", "data-structures", "memory-management", "rust-patterns"]
repository = "https://github.com/opensound-org/est"
homepage = "https://github.com/opensound-org/est"
description = """
Extensions for the rust Standard library and Tokio.
"""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we are using 2024 Edition.
# 因为我们正在使用2024 Edition。
# https://blog.rust-lang.org/2025/02/20/Rust-1.85.0.html
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = { version = "1.0.98", optional = true }
derive_more = { version = "2.0.1", features = ["display"], optional = true }
indexmap = { version = "2.9.0", optional = true }
ron = { version = "0.10.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = { version = "2.0.12", optional = true }
tokio = { version = "1.45.0", features = ["macros"], optional = true }
tokio-util = { version = "0.7.15", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "test-util", "time"] }
tokio-util = { version = "0.7.15", features = ["time"] }
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
version_check = "0.9.5"

[features]
# Please only remove this comment during the development phase.
# 请只在开发阶段解除此注释。
# default = ["full"]

full = [
  "collections",
  "future",
  "process",
  "result",
  "sync",
  "task",
  "thread",

  "signal",
  "task_tracker",
  "indexmap",
  "serde",
]

collections = ["dep:thiserror"]
future = []
process = ["tokio/process"]
result = ["dep:anyhow"]
sync = ["tokio/sync"]
task = ["future", "sync", "dep:derive_more", "tokio/rt"]
thread = ["dep:derive_more", "dep:ron"]

signal = ["tokio/signal"]
task_tracker = ["dep:tokio-util"]
indexmap = ["dep:indexmap"]
serde = ["dep:serde"]

[[bench]]
name = "performance"
harness = false
